[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tibet-core"
version = "0.2.0"
description = "Token-based Intent, Behavior, Evidence & Trust - Cryptographic provenance for trustworthy systems"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "J. van de Meent", email = "jasper@humotica.com"},
    {name = "R. AI", email = "info@humotica.com"},
]
keywords = [
    "trust", "provenance", "audit", "security", "compliance",
    "iso5338", "nis2", "bio2", "owasp", "ai-safety",
    "cryptographic", "tokens", "intent", "behavior", "evidence"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Logging",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
full = ["httpx>=0.24.0"]
dev = ["pytest>=7.0", "ruff>=0.1.0"]

[project.urls]
Homepage = "https://humotica.com"
Repository = "https://github.com/humotica/tibet-core"
Documentation = "https://humotica.com/docs/tibet"

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.hatch.build.targets.wheel]
packages = ["src/tibet_core"]
